<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blank"
    android:orientation="vertical"
    android:padding="@dimen/game_padding" >

    <LinearLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:weightSum="0.2" >

        <TextView
            android:id="@+id/TextView_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score_label"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/TextView_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score_def"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/TextView_score_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score_desc_none"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ranklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageView_rank_first"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/rank_first"
                android:src="@drawable/spade" />

            <TextView
                android:id="@+id/TextView_rank_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/score_def"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageView_rank_second"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/rank_second"
                android:src="@drawable/heart" />

            <TextView
                android:id="@+id/TextView_rank_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/score_def"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageView_rank_third"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/rank_third"
                android:src="@drawable/club" />

            <TextView
                android:id="@+id/TextView_rank_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/score_def"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView_rank_fourth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/rank_fourth"
                android:src="@drawable/diamond" />

            <TextView
                android:id="@+id/TextView_rank_fourth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/score_def"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <clearcard.button.ShareButton
                android:id="@+id/Button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <clearcard.button.RefreshButton
                android:id="@+id/Button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <clearcard.button.HomeButton
                android:id="@+id/Button_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@id/ButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="0.2" >

    </LinearLayout>

</LinearLayout>
